--- a/css.css
+++ b/css.css
@@ -6,11 +6,13 @@
     }
 .flex-container{
     display: flex;
-    gap: 300px;
+    gap: 500px;
     padding: 30px;
+    color: blueviolet;
+    
 }
 .flex-item{
- border: 10px black;
+    border: 2px solid #000000;
 }
 .footer { 
     background-color: #333; 
@@ -20,6 +22,10 @@
     position: static;
     bottom: 0;
     min-height: 30px;
-
     } 
+.Image{
+    grid-template-columns: none;
+    grid-column: span;
+    text-align: center;
+}
     
